styling and text

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,15 @@
 </ion-header>
 
 <ion-content padding>
+  <div>
+    <h2 text-center>Short project description!</h2>
+    <p>
+    This is a simple app with onbaording flow.
+    I haven't put any logic in the Tabs pages, since I wanted to show name convetions and project structure.
+    </p>
+    <p>
+      Please notice that once you reload the page, the user you are logged in with is lost. I do not store the user anywhere for now.
+    </p>
+  </div>
 
 </ion-content>
