--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -8,6 +8,7 @@
 
 <ion-content padding>
   
+  <div class="profile-text">Here you will be able  change your profile in the future</div>
   <div class="logOut-button-container">
     <button ion-button full round type="button" (click)="logOut()">Log out</button>
   </div>
